@@ -3,6 +3,8 @@ Changes in @NEW@:
     * The command line interface to cvc derive (added in Conary 1.2.8)
       has been changed.  It now derives onto your buildLabel by default,
       with a --target option to derive onto a different label.
+    * verify no longer complains about files which have been removed
+      with 'conary remove' (CNY-950)
 
   o Server Changes:
     * 'serializeCommits' has been added as a new boolean server
